[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/DropProjectileDraw.tres" type="SphereMesh" id=1]
[ext_resource path="res://assets/models/seeded.glb" type="PackedScene" id=2]
[ext_resource path="res://scenes/fountainPlant.gd" type="Script" id=3]
[ext_resource path="res://scenes/PlantBody.gd" type="Script" id=4]
[ext_resource path="res://assets/models/fountain.glb" type="PackedScene" id=5]
[ext_resource path="res://scenes/Pickup.gd" type="Script" id=6]
[ext_resource path="res://assets/models/purple_seed.glb" type="PackedScene" id=7]

[sub_resource type="CylinderShape" id=1]
radius = 1.12506
height = 6.01668

[sub_resource type="CylinderShape" id=7]
radius = 12.5661
height = 9.63334

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.860465, 1 )
colors = PoolColorArray( 0.15625, 0.189209, 1, 1, 0.279797, 0.39364, 1, 1, 0.625, 0.964844, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.776316, 0.984091 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.238636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 2
emission_box_extents = Vector3( 10, 4, 10 )
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.91
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = -0.11
hue_variation_random = 0.58

[sub_resource type="SphereShape" id=8]
radius = 1.60113

[node name="Plant" type="Spatial"]
script = ExtResource( 3 )
grow_speed = 0.06

[node name="Model" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.402167, 0, 0, 0, 0.402167, 0, 0, 0, 0.402167, 0, 0, 0 )

[node name="StaticBody" type="StaticBody" parent="Model"]
transform = Transform( 2.48653, 0, 0, 0, 2.48653, 0, 0, 0, 2.48653, 0, 0, 0 )
collision_layer = 4097
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Model/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0970829, 3.24486, 0.194482 )
shape = SubResource( 1 )

[node name="seeded" parent="." instance=ExtResource( 2 )]

[node name="FireWarding" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.39977, 0 )
monitoring = false
collision_layer = 32
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="FireWarding"]
shape = SubResource( 7 )

[node name="ParticleEmitters" type="Spatial" parent="."]

[node name="Particles" type="Particles" parent="ParticleEmitters"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7837, 0 )
emitting = false
amount = 4
lifetime = 3.0
visibility_aabb = AABB( -10.3857, -4, -10.3104, 20.7713, 8, 20.6208 )
process_material = SubResource( 6 )
draw_pass_1 = ExtResource( 1 )

[node name="Particles2" type="Particles" parent="ParticleEmitters"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7837, 0 )
emitting = false
amount = 4
lifetime = 3.0
visibility_aabb = AABB( -10.3857, -4, -10.3104, 20.7713, 8, 20.6208 )
process_material = SubResource( 6 )
draw_pass_1 = ExtResource( 1 )

[node name="Particles3" type="Particles" parent="ParticleEmitters"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7837, 0 )
emitting = false
amount = 4
lifetime = 3.0
visibility_aabb = AABB( -10.3857, -4, -10.3104, 20.7713, 8, 20.6208 )
process_material = SubResource( 6 )
draw_pass_1 = ExtResource( 1 )

[node name="Particles4" type="Particles" parent="ParticleEmitters"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7837, 0 )
emitting = false
amount = 4
lifetime = 3.0
visibility_aabb = AABB( -10.3857, -4, -10.3104, 20.7713, 8, 20.6208 )
process_material = SubResource( 6 )
draw_pass_1 = ExtResource( 1 )

[node name="Particles5" type="Particles" parent="ParticleEmitters"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.7837, 0 )
emitting = false
amount = 4
lifetime = 3.0
visibility_aabb = AABB( -10.3857, -4, -10.3104, 20.7713, 8, 20.6208 )
process_material = SubResource( 6 )
draw_pass_1 = ExtResource( 1 )

[node name="Seed" type="Spatial" parent="."]
transform = Transform( 0.850707, 0.379826, -0.36336, -0.269431, 0.908643, 0.319021, 0.451337, -0.173493, 0.875326, -0.173808, 3.63423, 0.691689 )
visible = false

[node name="purple_seed" parent="Seed" instance=ExtResource( 7 )]

[node name="GetDrop" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.08986, 0.901755 )
monitoring = false
monitorable = false
collision_layer = 4
collision_mask = 4
script = ExtResource( 6 )
item_name = "FountainSeed"

[node name="CollisionShape" type="CollisionShape" parent="GetDrop"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0526893, 0, 0.183619 )
shape = SubResource( 8 )

[node name="SeedTimer" type="Timer" parent="."]
wait_time = 130.0
one_shot = true

[connection signal="fire" from="Model/StaticBody" to="." method="_on_StaticBody_fire"]
[connection signal="watered" from="Model/StaticBody" to="." method="_on_StaticBody_watered"]
[connection signal="on_pickup" from="GetDrop" to="." method="_on_GetDrop_on_pickup"]
[connection signal="timeout" from="SeedTimer" to="." method="_on_SeedTimer_timeout"]

[editable path="Model"]
